GNOME Bugzilla – Bug 644048
soup_date_new_from_string fails with uppercase abbreviations
Last modified: 2011-03-08 15:07:04 UTC
A date such as MON, 17 APR 2006 19:53:36 -0400 when given to soup_date_new_from_string is not parsed. It does parse if changing the day to "Mon" and month to "Apr". I presume the parser should be case insensitive.
Created attachment 182720 [details] [review] Parse month names regardless of case The attached patch makes the month parsing caseless and adds a test case.
Comment on attachment 182720 [details] [review] Parse month names regardless of case (oops, wrong button) >+ if (!strncasecmp (*date_string, months[i], 3)) { you need to use g_ascii_strncasecmp(), or else it won't work right in Turkey. OK to commit with that change.
Committed with the change. Thanks for the quick review.