Parse month names regardless of case

A test case is added that verifies that this works.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=644048